second commit message

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>D:\Users\Temp\AppData\Local\Temp\testng-eclipse--271629426\testng-customsuite.xml</span>
+                    <span>D:\Users\Temp\AppData\Local\Temp\testng-eclipse--1811877649\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,17 +104,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Day1.First" hash-for-method="f(Demon, Demon123)">f(Demon, Demon123)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Day1.second" hash-for-method="f(Omkar, Omkar123)">f(Omkar, Omkar123)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Day1.First" hash-for-method="f(Omkar, Omkar123)">f(Omkar, Omkar123)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Day1.second" hash-for-method="f(Demon, Demon123)">f(Demon, Demon123)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Day1.First" hash-for-method="f(Ram, Ram123)">f(Ram, Ram123)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Day1.second" hash-for-method="f(Ram, Ram123)">f(Ram, Ram123)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,23 +132,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Day1.First</span>
+              <span class="class-name">Day1.second</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="f(Demon, Demon123)">
-                  </a> <!-- f(Demon, Demon123) -->
-                  <span class="method-name">f</span>
-                  <span class="parameters">(Demon, Demon123)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="f(Omkar, Omkar123)">
                   </a> <!-- f(Omkar, Omkar123) -->
                   <span class="method-name">f</span>
                   <span class="parameters">(Omkar, Omkar123)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="f(Demon, Demon123)">
+                  </a> <!-- f(Demon, Demon123) -->
+                  <span class="method-name">f</span>
+                  <span class="parameters">(Demon, Demon123)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -164,7 +164,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\Users\Temp\AppData\Local\Temp\testng-eclipse--271629426\testng-customsuite.xml</span>
+            <span class="header-content">D:\Users\Temp\AppData\Local\Temp\testng-eclipse--1811877649\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -173,7 +173,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Day1.First&quot;/&gt;
+      &lt;class name=&quot;Day1.second&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -216,16 +216,16 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'f')
-data.setCell(0, 2, 'Day1.First')
-data.setCell(0, 3, 2547);
+data.setCell(0, 2, 'Day1.second')
+data.setCell(0, 3, 2506);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'f')
-data.setCell(1, 2, 'Day1.First')
-data.setCell(1, 3, 565);
+data.setCell(1, 2, 'Day1.second')
+data.setCell(1, 3, 553);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'f')
-data.setCell(2, 2, 'Day1.First')
-data.setCell(2, 3, 420);
+data.setCell(2, 2, 'Day1.second')
+data.setCell(2, 3, 486);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -256,26 +256,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Day1.First</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Day1.second</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">beforeTest</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">f(Omkar, Omkar123)</span>
-                <span class="method-start">28278 ms</span>
+                <span class="method-start">21976 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">f(Ram, Ram123)</span>
-                <span class="method-start">30876 ms</span>
+                <span class="method-start">24490 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">f(Demon, Demon123)</span>
-                <span class="method-start">31298 ms</span>
+                <span class="method-start">25044 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">31873 ms</span>
+                <span class="method-start">25534 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
