--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6aaa8d">  <td>22/09/08 13:00:24</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterTest()[pri:0, instance:Day1.First@6dde5c8c]">&lt;&lt;afterTest</td> 
+<tr bgcolor="6aaa8d">  <td>22/09/08 18:15:37</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterTest()[pri:0, instance:Day1.second@6dde5c8c]">&lt;&lt;afterTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@302155142</td>   <td></td> </tr>
-<tr bgcolor="6aaa8d">  <td>22/09/08 12:59:52</td>   <td>-31867</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeTest()[pri:0, instance:Day1.First@6dde5c8c]">&gt;&gt;beforeTest</td> 
+<tr bgcolor="6aaa8d">  <td>22/09/08 18:15:12</td>   <td>-25523</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeTest()[pri:0, instance:Day1.second@6dde5c8c]">&gt;&gt;beforeTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@302155142</td>   <td></td> </tr>
-<tr bgcolor="f6b4b9">  <td>22/09/08 13:00:23</td>   <td>-575</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="First.f(java.lang.String,java.lang.String)[pri:0, instance:Day1.First@6dde5c8c]">f</td> 
+<tr bgcolor="f6b4b9">  <td>22/09/08 18:15:37</td>   <td>-490</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="second.f(java.lang.String,java.lang.String)[pri:0, instance:Day1.second@6dde5c8c]">f</td> 
   <td>main@302155142</td>   <td></td> </tr>
-<tr bgcolor="f6b4b9">  <td>22/09/08 13:00:23</td>   <td>-575</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="First.f(java.lang.String,java.lang.String)[pri:0, instance:Day1.First@6dde5c8c]">f</td> 
+<tr bgcolor="f6b4b9">  <td>22/09/08 18:15:37</td>   <td>-490</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="second.f(java.lang.String,java.lang.String)[pri:0, instance:Day1.second@6dde5c8c]">f</td> 
   <td>main@302155142</td>   <td></td> </tr>
-<tr bgcolor="f6b4b9">  <td>22/09/08 13:00:23</td>   <td>-575</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="First.f(java.lang.String,java.lang.String)[pri:0, instance:Day1.First@6dde5c8c]">f</td> 
+<tr bgcolor="f6b4b9">  <td>22/09/08 18:15:37</td>   <td>-490</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="second.f(java.lang.String,java.lang.String)[pri:0, instance:Day1.second@6dde5c8c]">f</td> 
   <td>main@302155142</td>   <td></td> </tr>
 </table>
